<resources>
    <string name="vacationlist_tag_stored">Archive</string>
    <string name="vacationlist_tag_myvacations">My vacations</string>
    <string name="bnItinerario">Route</string>
    <string name="bnSpese">Expenses</string>
    <string name="bnListe">Lists</string>
    <string name="sdImpostazioni">Settings</string>
    <string name="sdNovita">What\'s new</string>
    <string name="sdOpenMenu">Side menu opened</string>
    <string name="sdCloseMenu">Side menu closed</string>
    <string name="op_modify">Modify</string>
    <string name="op_store">Store</string>
    <string name="op_delete">Delete</string>
    <string name="vlImageDescriptionAcc">Vacation, touch to see details</string>
    <string name="vlOpzioniAcc">Options</string>
    <string name="input_title_ob">Title*</string>
    <string name="input_period_ob">Period*</string>
    <string name="subfield_period_from">from</string>
    <string name="subfield_period_to">to</string>
    <string name="activity_title_new_vacation">New vacation</string>
    <string name="field_place_ob">Place</string>
    <string name="field_photo_ob">Picture</string>
    <string name="field_partes_ob">Participants</string>
    <string name="field_notes_ob">Notes</string>
    <string name="field_photo_buttontext">Add</string>
    <string name="field_photo_description">Describe your vacation with a nice picture.</string>
    <string name="field_partec_buttontext">Add</string>
    <string name="my_self">Myself</string>
    <string name="dialog_confirm">Done</string>
    <string name="dialog_participant_message">Choose participants</string>
    <string name="button_ignore">Cancel</string>
    <string name="button_create">Create</string>
    <string name="button_done">Done</string>
    <string name="dialog_invite_title">Where are my friends?</string>
    <string name="dialog_invite_button">Invite</string>
    <string name="dialog_invite_description">Invite your friends on VacationFriends!\nYou will be able to organize together your vacations, with comfort and simplicity.</string>
    <string name="photo_field_choosed_photo">Picture of the vacation</string>
    <string name="err_photo_not_found">Image not found</string>
    <string name="ptutorial_vacationlist_welcome">Welcome!</string>
    <string name="ptutorial_vacationlist_whatsee">Here you will see all your recent vacations.</string>
    <string name="ptutorial_vacationlist_calltoaction">To create a new vacation touch here!</string>
    <string name="ptutorial_storedlist_whatsee">Stored vacations will be shown here.</string>
    <string name="button_confirm">Confirm</string>
    <string name="dialog_vacation_store_message">You will not be able to modify it, but you can restore it later.</string>
    <string name="dialog_vacation_delete_message">This action is irreversible.</string>
    <string name="acivity_title_mod_vacation">Modify vacation</string>
    <string name="button_save">Save</string>
    <string name="ph_name_lastname">Name Lastname</string>
    <string name="button_remove_participant">Remove participant</string>
    <string name="op_unachieve">Restore</string>
    <string name="vacationlist_header_now">Current</string>
    <string name="vacationlist_header_next">Next</string>
    <string name="vacationlist_header_previous">Previous</string>
    <string name="err_field_title">Give a title to the element</string>
    <string name="err_vacationlist_date_missing">Insert a date</string>
    <string name="err_vacationlist_date_wrong">The period looks wrong, check it</string>
    <string name="home_tag_summary">Summary</string>
    <string name="home_tag_chat">Discussions</string>
    <string name="home_tag_activitylog">Activity log</string>
    <string name="op_synch">Synchronize</string>
    <string name="app_name" translatable="false">Vacation Friend</string>
    <string name="bnHome" translatable="false">Home</string>
    <string name="sdFeedback" translatable="false">Feedback</string>
    <string name="sdAbout" translatable="false">About</string>
    <string name="ph_user_email" translatable="false">lastname.name@domain.com</string>
    <string name="ph_vacation_name" translatable="false">Vacation name</string>
    <string name="ph_vacationlist_header" translatable="false">Header</string>
    <string name="op_settings">Settings</string>
    <string name="op_filter">Filter</string>
    <string name="lists_tag_personal">Personal</string>
    <string name="lists_tag_foreveryone">For Everyone</string>
    <string name="lists_tag_collaborative">Collaborative</string>
    <string name="expenses_tag_expenses">Expenses</string>
    <string name="expenses_tag_debts">Debts</string>
    <string name="expenses_tag_resolution">Resolution</string>
    <string name="ph_home_image_description">Home image</string>
    <string name="op_sort">Sort</string>
    <string name="ph_expenses_image_description">Expenses image</string>
    <string name="ph_lists_image_description">Lists image</string>
    <string name="ph_route_image_description">Route image</string>
    <string name="activity_title_modify_vacation">Modify vacation</string>
    <string name="cr_vacation_header_image">Header with vacation image</string>
    <string name="field_title_ob">Title</string>
    <string name="ph_name">Name</string>
    <string name="field_partic_number">participants</string>
    <string name="field_period_days">days</string>
    <string name="ph_lastname">Lastname</string>
    <string name="ptutorial_chat_whatsee">The chat list will be shown here.\nIt will update automatically.</string>
    <string name="activitylog_header_today">Today\'s activities</string>
    <string name="ph_activity_description">Activity description</string>
    <string name="ph_time_of_day">hh:mm</string>
    <string name="ph_activitylog_edit_period">has edited the start of the vacation from dd/mm to dd/mm</string>
    <string name="ph_activitylog_edit_participants">has added N participants</string>
    <string name="ph_activitylog_edit_vacation">has created the vacation Vacation Title</string>
    <string name="ph_stop">Stop</string>
    <string name="ph_stop_time" translatable="false">hh:mm ~ hh:mm</string>
    <string name="ph_route_location">Address Street nn, City Name, State</string>
    <string name="ph_route_title">Title</string>
    <string name="ph_vehicle_time" translatable="false">mm min</string>
    <string name="ph_vehicle_distance" translatable="false">n.n km</string>
    <string name="ph_vehicle_label">Vehicle</string>
    <string name="cd_route_vehicle">Vehicle stopIcon</string>
    <string name="ph_route_day">Weekday DD month YYYY</string>
    <string name="route_stop_departure">Departure at %s</string>
    <string name="route_stop_arrival">Arrival at %s</string>
    <string name="vehicle_choose">Tap to choose a vehicle</string>
    <string name="cd_route_vehicle_missing">Missing vehicle stopIcon</string>
    <string name="activity_title_new_routeStop">New stop</string>
    <string name="input_day_ob">Date*</string>
    <string name="hint_notes">Add notes here…</string>
    <string name="field_icon_ob">Stop icon</string>
    <string name="stop_radio_house">House</string>
    <string name="stop_radio_city">City</string>
    <string name="stop_radio_hotel">Hotel</string>
    <string name="stop_radio_reastaurant">Restaurant</string>
    <string name="stop_radio_cafe">Cafe</string>
    <string name="stop_radio_beach">Beach</string>
    <string name="stop_radio_gas_station">Gas station</string>
    <string name="stop_radio_generic">Generic</string>
    <string name="time_mode_arrival">Arrival time*</string>
    <string name="time_mode_departure">Departure time*</string>
    <string name="subfield_time_departure">Leave from</string>
    <string name="subfield_time_departure_time">at</string>
    <string name="ph_timefield" translatable="false">Specify time mode</string>
    <string name="demo_stop_flat">Flat</string>
    <string name="demo_stop_restaurant">Restaurant</string>
    <string name="demo_route_beach">Beach</string>
    <string name="err_time_missing">Insert a time</string>
    <string name="demo_new_stop">DEMO: stop inserted in route</string>
    <string name="op_route_return">Return</string>
    <string name="op_discuss">Discuss</string>
    <string name="vehicle_foot">Walk</string>
    <string name="vehicle_bike">Bike</string>
    <string name="vehicle_car">Car</string>
    <string name="vehicle_bus">Bus</string>
    <string name="vehicle_train">Train</string>
    <string name="vehicle_plane">Plane</string>
    <string name="today_s_expenses">Today\'s expenses</string>
    <string name="breakfast">Breakfast</string>
    <string name="_09_37" translatable="false">09:37</string>
    <string name="_2_50" translatable="false">2,50€</string>
    <string name="suncream">Suncream</string>
    <string name="_11_15" translatable="false">11:15</string>
    <string name="_25_00kn" translatable="false">25,00kn</string>
    <string name="_3_60" translatable="false">~3,60€</string>
    <string name="restaurant">Restaurant</string>
    <string name="_14_02" translatable="false">14:02</string>
    <string name="_44_00" translatable="false">44,00€</string>
    <string name="payed_for_4_people">- paid for 4 people</string>
    <string name="previous_expenses">Previous expenses</string>
    <string name="museum_ticket">Museum ticket</string>
    <string name="_10_00" translatable="false">10,00€</string>
    <string name="shopping" translatable="false">Shopping</string>
    <string name="_21_08" translatable="false">21/08</string>
    <string name="_22_08" translatable="false">22/08</string>
    <string name="_15_35" translatable="false">15,35$</string>
    <string name="_13_50" translatable="false">~13,50€</string>
    <string name="parking_ticket">Parking ticket</string>
    <string name="_5_70" translatable="false">5,70€</string>
    <string name="payed_for_3_people">- paid for 3 people</string>
    <string name="total_expenses">Total expenses</string>
    <string name="of_witch_on_credit">of witch on credit</string>
    <string name="actual_expenses">Actual expenses</string>
    <string name="_79_30" translatable="false">79,30€</string>
    <string name="_36_80" translatable="false">36,80€</string>
    <string name="_42_60" translatable="false">42,60€</string>
    <string name="lunch_at_al_faro">Lunch at Al faro</string>
    <string name="from">- from</string>
    <string name="sara" translatable="false">Sara</string>
    <string name="shopping_at_pola">Shopping at Pola</string>
    <string name="_5_50" translatable="false">5,50€</string>
    <string name="beach_ticket">Beach ticket</string>
    <string name="carlo" translatable="false">Carlo</string>
    <string name="_1_50" translatable="false">1,50€</string>
    <string name="lunch_on_the_streets">Lunch on the streets</string>
    <string name="marco" translatable="false">Marco</string>
    <string name="_6_40" translatable="false">6,40€</string>
    <string name="parcking_ticket_at_pola">Parcking ticket at Pola</string>
    <string name="_20_08" translatable="false">20/08</string>
    <string name="anna" translatable="false">Anna</string>
    <string name="flat_rent">Flat rent</string>
    <string name="andre" translatable="false">Andre</string>
    <string name="_103_35" translatable="false">103,35€</string>
    <string name="total_debts">Total debts</string>
    <string name="_118_25" translatable="false">118,25€</string>
    <string name="resolution_explanation_header">Do these exchanges with the others participants to solve your debts and credits easily.</string>
    <string name="resolution_receive">Get</string>
    <string name="resolution_from">from</string>
    <string name="plus" translatable="false">+</string>
    <string name="resolution_give">Give</string>
    <string name="resolution_to">to</string>
    <string name="resolution_done_dialog_title">Double confirmation</string>
</resources>