<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:id="@+id/resolution_action_label"
        style="@style/Subfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"

        android:text="@string/resolution_receive"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/resolution_group_value"
        style="@style/Fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/_5_70"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/resolution_action_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/resolution_action_direction"
        style="@style/Subfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/resolution_from"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/resolution_group_value"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/resolution_person_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"

        android:src="@drawable/blonde_woman"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/resolution_action_direction"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resolution_person_name"
        style="@style/Fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"

        android:text="@string/sara"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/resolution_person_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resolution_solve_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/button_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>