<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/resolution_payer_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"

        android:src="@drawable/blonde_woman"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resolution_expense_title"
        style="@style/Subfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:text="@string/lunch_on_the_streets"
        android:textColor="@color/white"
        android:maxWidth="178dp"
        android:maxLines="1"
        android:ellipsize="end"

        app:layout_constraintStart_toEndOf="@id/resolution_payer_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/resolution_expense_sign"
        style="@style/Subfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/plus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resolution_expense_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resolution_expense_value"
        style="@style/Subfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_5_70"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resolution_expense_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resolution_expense_date"
        style="@style/Subfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_21_08"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>