<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/icon_photo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"

        android:src="@drawable/ic_field_photo_24dp"
        app:layout_constraintBottom_toTopOf="@id/photo_field_barrier_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/photo_field_barrier_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/field_photo_ob" />

    <android.support.constraint.Barrier
        android:id="@+id/photo_field_barrier_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="label_photo,input_photo"
        app:layout_constraintStart_toEndOf="@id/icon_photo" />

    <android.support.constraint.Barrier
        android:id="@+id/photo_field_barrier_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="label_photo"
        app:layout_constraintStart_toEndOf="@id/icon_photo" />

    <TextView
        android:id="@+id/label_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        style="@style/Fields"
        android:text="@string/field_photo_ob"

        app:layout_constraintBottom_toTopOf="@id/input_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/photo_field_barrier_vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_photo"
        style="@style/FieldDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/field_photo_description"
        app:layout_constraintBottom_toTopOf="@+id/input_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_field_barrier_vertical"
        app:layout_constraintTop_toBottomOf="@id/photo_field_barrier_horizontal" />

    <Button
        android:id="@+id/input_photo"
        style="@style/AddFieldBotton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        android:layout_marginRight="16dp"
        android:drawableStart="@drawable/ic_add_photo_white_24dp"
        android:drawableLeft="@drawable/ic_add_photo_white_24dp"
        android:drawablePadding="8dp"

        android:gravity="start|center"
        android:text="@string/field_photo_buttontext"

        app:layout_constraintBottom_toTopOf="@id/input_photo_choosed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_field_barrier_vertical"
        app:layout_constraintTop_toBottomOf="@id/description_photo" />

    <ImageButton
        android:id="@+id/input_photo_choosed"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"

        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:visibility="gone"
        android:contentDescription="@string/photo_field_choosed_photo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_field_barrier_vertical"
        app:layout_constraintTop_toBottomOf="@id/input_photo" />

</android.support.constraint.ConstraintLayout>