<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:showIn="@layout/vacationlist_fragment_recent">

    <TextView
        android:id="@+id/ptutorial_vacationlist_welcome"
        style="@style/Ptutorial"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginTop="8dp"

        android:gravity="start"
        android:text="@string/ptutorial_vacationlist_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/ptutorial_vacationlist_whatsee"
        style="@style/Ptutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"

        android:gravity="start"
        android:text="@string/ptutorial_vacationlist_whatsee"

        app:layout_constraintBottom_toTopOf="@+id/ptutorial_vacationlist_calltoaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier4"
        app:layout_constraintTop_toBottomOf="@+id/ptutorial_vacationlist_welcome"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/ptutorial_vacationlist_calltoaction"
        style="@style/Pcalltoaction"
        android:layout_width="268dp"

        android:layout_height="wrap_content"

        android:text="@string/ptutorial_vacationlist_calltoaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier4"
        app:layout_constraintTop_toTopOf="@+id/barrier2" />

    <ImageView
        android:id="@+id/ptutorial_arrow"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ptutorial_vacationlist_calltoaction"
        app:layout_constraintTop_toTopOf="@+id/barrier2" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="ptutorial_arrow,ptutorial_vacationlist_calltoaction" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ptutorial_arrow,ptutorial_vacationlist_calltoaction" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="ptutorial_vacationlist_welcome,ptutorial_vacationlist_whatsee,ptutorial_vacationlist_calltoaction" />


</android.support.constraint.ConstraintLayout>